--- a/.gitignore
+++ b/.gitignore
@@ -10,21 +10,22 @@
 # See the comments below for more info on how to add exceptions for your
 # content. Or see git's documentation for more info on .gitignore files:
 # http://kernel.org/pub/software/scm/git/docs/gitignore.html
- 
+
 # Ignore everything in the root except the "wp-content" directory.
 /*
 !.gitignore
 !wp-content/
 !images/
 !fonts/
- 
+!*.yml
+
 # Ignore everything in the "wp-content" directory, except the "plugins"
 # and "themes" directories.
 wp-content/*
 !wp-content/plugins/
 !wp-content/themes/
 
- 
+
 # Ignore everything in the "plugins" directory, except the plugins you
 # specify (see the commented-out examples for hints on how to do this.)
 wp-content/plugins/*
